--- a/crud/pom.xml
+++ b/crud/pom.xml
@@ -60,6 +60,14 @@
     <artifactId>mysql-connector-java</artifactId>
     <version>6.0.4</version>
 </dependency>
+
+
+        
+                <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.2.3</version>
+        </dependency>
         
        
     </dependencies>
